--- a/sources/assets/css/main.css
+++ b/sources/assets/css/main.css
@@ -1,4 +1,10 @@
+body{
+    background-color: black;
+    color:white;
+}
+
 .module{
+    float: left;
     width: 150px;
     height: 150px;
     border:1px solid black;
