Travail sur la gestion du board avec gridster

--- a/sources/assets/css/config.css
+++ b/sources/assets/css/config.css
@@ -1,6 +1,9 @@
 .content {
   color: white;
 }
+.gridster ul {
+    min-height: 120px;
+}
 .gridster .gs-w {
   background: #61A9CF;
   cursor: move;
