--- a/sources/assets/css/display.css
+++ b/sources/assets/css/display.css
@@ -43,7 +43,8 @@ h1{
     background-color: gray;
     width:100px;
     height:100px;
-    top:0px;
+    top: 0px;
     left:80px;
     bottom: 1px;
+    margin: 0;
 }
